--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <div class="topimg"></div>
         <div class="content-wrap container cfix">
             <div class="breadcrumbs">
-                <span><a href="/"><span>Главная</span></a></span><b>/</b><span><a href="http://catalonia-realty.com/spisok-obektov/?where=1"> <span>Барселона</span></a></span><b>/</b><span><span>Резиденция Célere Magòria. Барселона</span></span>
+                <span><a href="/"><span>Главная</span></a></span><b>/</b><span><a href="http://catalonia-realty.com/spisok-obektov/?where=1"><span>Барселона</span></a></span><b>/</b><span><span>Резиденция Célere Magòria. Барселона</span></span>
             </div>
             <div class="left-column">
                 <div class="menu-newP">
@@ -44,7 +44,7 @@
                             </ul>
                         </li>
                         <li>
-                            <p>Жизнь в Испании#</p>
+                            <p>Жизнь в Испании</p>
                             <ul>
                                 <li><a href="#"> Общая информация</a></li>
                                 <li><a href="#">Налоги</a></li>
@@ -67,16 +67,68 @@
                 </div>
             </div>
             <div class="right-column">
-                <div class="item">
-                    <div class="img"><img src="" alt=""></div>
+                <div class="item cfix">
+                    <div class="img"><img src="images/itemnew.jpg" alt=""></div>
                     <div class="txt">
-                        <p></p>
-                        <p></p>
-                        <a href=""></a></div>
+                        <p>Заголовок статьи</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом </p>
+                        <div class="bttn"><a href="#">Подробнее</a></div>
+                    </div>
+
+                </div>
+                <div class="item cfix">
+                    <div class="img"><img src="images/itemnew.jpg" alt=""></div>
+                    <div class="txt">
+                        <p>Заголовок статьи</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он.</p>
+                        <div class="bttn"><a href="#">Подробнее</a></div>
+                    </div>
+
+                </div>
+                <div class="item cfix">
+                    <div class="img"><img src="images/itemnew.jpg" alt=""></div>
+                    <div class="txt">
+                        <p>Заголовок статьи</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он.</p>
+                        <div class="bttn"><a href="#">Подробнее</a></div>
+                    </div>
+
+                </div>
+                <div class="item-big">
+                    <div class="img"><img src="images/itemnewB.jpg" alt=""></div>
+                    <div class="txt">
+                        <p>Общая информация</p>
+                        <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа
+                            на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой
+                            коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки
+                            беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах. Над столом, где были разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно.
+                            Вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку. На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой целиком.</p>
+                    </div>
+                    <div class="socials-butt-wrap">
+                        <div class="socials-butt">
+                            <a href="#"><img src="images/soc-test.jpg" alt=""></a>
+                            <a href="#"><img src="images/soc-test.jpg" alt=""></a>
+                            <a href="#"><img src="images/soc-test.jpg" alt=""></a>
+                            <a href="#"><img src="images/soc-test.jpg" alt=""></a>
+                            <a href="#"><img src="images/soc-test.jpg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="lets-find">
+                    <div class="buttonNew"><a href="#"><span>ДАВАЙТЕ НАЙДЕМ ВАШ НОВЫЙ ДОМ</span></a></div>
+                    <div class="list-title">
+                        <p>Похожие статьи:</p>
+                        <ul>
+                            <li><a href="#">Проснувшись однажды утром после беспокойного сна</a></li>
+                            <li><a href="#">Что со мной случилось?Хорошо </a></li>
+                            <li><a href="#">бы еще немного поспать </a></li>
+                            <li><a href="#">Лежа на панцирнотвердой спинеЕго комната, </a></li>
+                            <li><a href="#">настоящая, разве что слишком маленькая</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
     <!-- /MAIN -->
 
